tests/snapshots/assets__check_file@unit-code-chained-call-compileable.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/chained-call-compileable.typ
---
#{
  (
    (
      1,
      2,
    ),
    2,
    3,
  )
    .rev()
    .rev()
    .at(0)
    .rev()
    .rev()
    .rev()
}

#{
  (
    "a": (
      "b": (
        1,
        2,
      ),
    ),
  )
    .a
    .b
    .rev()
    .rev()
    .rev()
    .len()
}


#(
  (
    1,
    2,
  ),
  2,
  3,
)
  .rev()
  .rev()
  .at(0)
  .rev()
  .rev()
  .rev()


#(
  "a": (
    "b": (
      1,
      2,
    ),
  ),
)
  .a
  .b
  .rev()
  .rev()
  .rev()
  .len()
