tests/snapshots/assets__check_file@unit-code-chained-call-compileable.typ-120.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/chained-call-compileable.typ
snapshot_kind: text
---
#{
  ((1, 2), 2, 3).rev().rev().at(0).rev().rev().rev()
}

#{
  ("a": ("b": (1, 2))).a.b.rev().rev().rev().len()
}


#((1, 2), 2, 3).rev().rev().at(0).rev().rev().rev()


#("a": ("b": (1, 2))).a.b.rev().rev().rev().len()
