tests/snapshots/assets__check_file@unit-code-chained-call-last-indent.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/chained-call-last-indent.typ
---
#{
  let tree = (
    1,
    2,
    3,
  )
  let depth = 1
  let build-node(
    tree,
    depth: 0,
    sibling: 1,
  ) = {
    repr(tree) + repr(depth) + repr(sibling)
  }
  let children
  children = tree
    .slice(1)
    .enumerate()
    .map((
    (
      n,
      c,
    ),
  ) => build-node(
    c,
    depth: depth + 1,
    sibling: n,
  ))
  children
}
